--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </form>
       
         <!-- Footer -->
-        <footer class="bg-dark text-center text-white py-3">
+        <footer class="bg-info text-center text-white py-3">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-md-left">
